--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
 	"scripts": {
 		"start": "node server.js"
 	},
+	"engines": {
+		"node": "12.x"
+	},
 	"dependencies": {
 		"ejs": "^3.1.5",
 		"express": "^4.15.2",
 		"cors": "^2.8.0"
 	},
+	"devDependencies": {
+		"got": "^11.3.0",
+		"tape": "^4.7.0"
+	},
 	"repository": {
 		"type": "git",
-		"url": "https://git.heroku.com/jjmason-timestamp-demo.git"
+		"url": "https://github.com/rookiebehaviour/jjmason-timestamp-demo"
 	},
 	"keywords": [
 		"node",
